# VerifAI

./: .env.example  .gitignore  ABI.json  CLAUDE(not polished).md  HYDRATION_PREVENTION.md  MACOS_GLASS_UPDATE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/browse/: page.tsx
app/create-dispute/: page.tsx
app/search/: page.tsx
app/verify-demo/: page.tsx
backend/: ABI.json  main.py
backend/core/: constants.py  data_models.py  hierarchical_prompts.py  prompts.py
backend/routers/: agent_router.py  contract_router.py  ipfs_router.py  marketplace_router.py  test_router.py
backend/services/: agent_service.py  contract_service.py  google_genai_service.py  hierarchical_verification_service.py  ipfs_service.py  marketplace_service.py  prompts.py  settlement_service.py  verification_logging_service.py  verification_service.py
backend/utils/: simulate.py
components/: BookServiceModal.tsx  CompleteWorkModal.tsx  EthIcon.tsx  MyPendingWorksModal.tsx  MyServicesModal.tsx  PublishServiceModal.tsx  SearchBar.tsx  SiteNav.tsx  WalletConnect.tsx  Web3Provider.tsx  theme-toggle.tsx
components/custom/: AuthGuard.tsx
components/search/: FilterBar.tsx  README.md  ResultCard.tsx  ResultsGrid.tsx  ServiceDetailsModal.tsx  VISUAL_GUIDE.md  index.ts
components/ui/: dropdown-menu.tsx
hooks/: useTheme.ts
lib/: generateServiceImage.ts  gigCategories.ts  marketplace.ts  search.ts
smartcontracts/: package.json
smartcontracts/contracts/: Counter.sol  VerifAIMarketplace.sol
(+2 files in other folders)
