[project]
name = "backend"
version = "0.1.0"
description = "Backend for the Modern Next.js + FastAPI template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain-ollama>=0.3.3",
    "pypdf>=6.9.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "web3>=7.14.1",
    "langchain-google-vertexai>=3.2.2",
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
